<resources>
    <string name="app_name">Finance Helper</string>
    <string name="salary_text">Денег заработано:</string>
    <string name="money_spent_text">Денег потрачено:</string>
    <string name="add_purchase_text">Добавить покупку</string>
    <string name="show_purchase_text">Посмотреть покупки</string>
    <string name="money_spent_base_text">0 Руб.</string>
    <string name="input_hint_text">Введите вашу зарплату</string>
    <string name="confirm_button_text">Готово</string>
    <string name="purchase_name_input_hint_text">Введите название покупки</string>
    <string name="purchase_cost_input_hint_text">Введите стоимость покупки</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="input_salary_hint_text">Введите вашу зарплату</string>
    <string name="ready_button_text">Готово</string>
    <string name="undeferred_expenses_wallet_name">Неотложенные расходы</string>
    <string name="welfare_wallet_name">Благосостояние</string>
    <string name="entertainment_wallet_name">Развлечения</string>
    <string name="education_wallet_name">Образование</string>
    <string name="free_expenses_wallet_name">Свободные расходы</string>
    <string name="wallets">Кошельки</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="salary_month">Укажите ваш доход за месяц</string>
    <string name="salary_continue">Для продолжения укажите ваш доход</string>
    <string name="add_purchase_welcome_text">Добавить покупку</string>
    <string name="all_purchases_text">Ваши покупки:</string>
    <string name="can_spend_text">Можно потратить:</string>
</resources>